# substreams-monitoring-smoke-test

./: .gitignore  .goreleaser.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  buf.gen.yaml  substreams.yaml
proto/: monitoring.proto
src/: lib.rs
src/pb/: mod.rs  sf.substreams.monitoring.v1.rs
